crates/bevy_ecs_compile_fail_tests/tests/ui/system_param_derive_readonly.stderr
warning: unused import: `SystemState`
 --> tests/ui/system_param_derive_readonly.rs:2:63
  |
2 | use bevy_ecs::system::{ReadOnlySystemParamFetch, SystemParam, SystemState};
  |                                                               ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `&'static mut Foo: ReadOnlyWorldQuery` is not satisfied
  --> tests/ui/system_param_derive_readonly.rs:18:23
   |
18 |     assert_readonly::<Mutable>();
   |                       ^^^^^^^ the trait `ReadOnlyWorldQuery` is not implemented for `&'static mut Foo`
   |
   = help: the following other types implement trait `ReadOnlyWorldQuery`:
             &T
             ()
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
             (F0, F1, F2, F3, F4, F5)
             (F0, F1, F2, F3, F4, F5, F6)
           and $N others
   = note: `ReadOnlyWorldQuery` is implemented for `&'static Foo`, but not for `&'static mut Foo`
   = note: required for `QueryState<&'static mut Foo>` to implement `ReadOnlySystemParamFetch`
   = note: 2 redundant requirements hidden
   = note: required for `FetchState<(QueryState<&'static mut Foo>,)>` to implement `ReadOnlySystemParamFetch`
note: required by a bound in `assert_readonly`
  --> tests/ui/system_param_derive_readonly.rs:23:32
   |
21 | fn assert_readonly<P: SystemParam>()
   |    --------------- required by a bound in this
22 | where
23 |     <P as SystemParam>::Fetch: ReadOnlySystemParamFetch,
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_readonly`
